--- a/Plugin/Payments/PayPal/Tests/Merchello.Tests.PayPal.Prototype/Merchello.Tests.PayPal.Prototype.csproj
+++ b/Plugin/Payments/PayPal/Tests/Merchello.Tests.PayPal.Prototype/Merchello.Tests.PayPal.Prototype.csproj
@@ -78,14 +78,17 @@
     <Reference Include="Lucene.Net">
       <HintPath>..\..\src\Merchello.Plugin.Payments.PayPal\packages\Lucene.Net.2.9.4.1\lib\net40\Lucene.Net.dll</HintPath>
     </Reference>
-    <Reference Include="Merchello.Core">
-      <HintPath>..\..\src\Merchello.Plugin.Payments.PayPal\packages\Merchello.Core.1.6.0\lib\net40\Merchello.Core.dll</HintPath>
+    <Reference Include="Merchello.Core, Version=1.9.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\src\Merchello.Plugin.Payments.PayPal\packages\Merchello.Core.1.9.1\lib\net40\Merchello.Core.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="Merchello.Examine">
-      <HintPath>..\..\src\Merchello.Plugin.Payments.PayPal\packages\Merchello.Core.1.6.0\lib\net40\Merchello.Examine.dll</HintPath>
+    <Reference Include="Merchello.Examine, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\src\Merchello.Plugin.Payments.PayPal\packages\Merchello.Core.1.9.1\lib\net40\Merchello.Examine.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="Merchello.Web">
-      <HintPath>..\..\src\Merchello.Plugin.Payments.PayPal\packages\Merchello.Core.1.6.0\lib\net40\Merchello.Web.dll</HintPath>
+    <Reference Include="Merchello.Web, Version=1.9.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\src\Merchello.Plugin.Payments.PayPal\packages\Merchello.Core.1.9.1\lib\net40\Merchello.Web.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.ApplicationBlocks.Data">
       <HintPath>..\..\src\Merchello.Plugin.Payments.PayPal\packages\UmbracoCms.Core.7.2.1\lib\Microsoft.ApplicationBlocks.Data.dll</HintPath>
